Added the beginning of the syntatic analysis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "*.ejs": "html",
         "ast.h": "c",
         "lexer.h": "c",
-        "main.h": "c"
+        "main.h": "c",
+        "syntatic_analysis.h": "c"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
 }
